Bug 1698799 - Reparse style attribute on bind for XUL like we do for all other elements. r=smaug

XUL is different. According to bug 564863 comment 17:

> nsXULElement used to not call its superclass BindToTree to avoid this
> reparsing.

Presumably for perf reasons? But since then we've added the MayHaveStyle
flag, which should make it fast. I don't see any reason this special
case makes any sense.

I could write a test for this patch (parse a XUL element in a data doc
with a style attribute, import it into a regular document), but honestly
this is well covered by WPT for all other elements, and this is removing
code, so I don't feel it buys us much.

Differential Revision: https://phabricator.services.mozilla.com/D113015